# EspWarden

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  Makefile  PRD_v0.md  README.md  partitions.csv  partitions_emulator.csv  partitions_secure.csv  sdkconfig.defaults  sdkconfig.defaults.base  sdkconfig.defaults.dev  sdkconfig.defaults.prod  sdkconfig.emulator
client/: package.json  test_sepolia_signing.ts  tsconfig.json
client/examples/: basic-usage.js  provisioning.js  trading-bot.js
client/src/: AuthManager.ts  ConfigManager.ts  ESP32Client.ts  ESP32Signer.ts  RetryManager.ts  errors.ts  index.ts  types.ts
docs/: EMULATOR_SETUP.md  HARDWARE_SETUP.md  PROJECT_STATUS.md  SECURITY_MODEL.md  TESTING.md  TESTING_QUICK_START.md  TESTING_SUMMARY.md
main/: CMakeLists.txt  Kconfig.projbuild  api_handlers.c  auth_manager.c  captive_dns.c  component.mk  crypto_manager.c  device_mode.c  emulator_stubs.c  https_server.c  main.c  policy_engine.c  provisioning_page.h  rate_limiter.c  storage_manager.c  wifi_manager.c
main/include/: api_handlers.h  auth_manager.h  captive_dns.h  crypto_manager.h  device_mode.h  emulator_stubs.h  esp32_signer.h  https_server.h  policy_engine.h  rate_limiter.h  storage_manager.h  wifi_manager.h
main/web/: provisioning.html
scripts/: run_emulator.sh  test_qemu.sh
test/: README.md  emulator_test.py  pytest.ini  requirements.txt  run_tests.sh  test_crypto.py  test_report_20250922_120332.txt  validate_tests.py
test/unit/: test_crypto_unit.c
